rtpsbcdepay: fix sbc frame length calculation for mono and stereo modes

https://bugzilla.gnome.org/show_bug.cgi?id=697463